[gd_scene load_steps=7 format=3 uid="uid://c0g8ofdb0pyl2"]

[ext_resource type="Script" path="res://scripts/town_hall.gd" id="1_wqvst"]
[ext_resource type="Texture2D" uid="uid://eqy6ckqg6t5" path="res://assets/MiniWorldSprites/Buildings/Cyan/CyanBarracks.png" id="2_gopy7"]
[ext_resource type="Script" path="res://scripts/components/health_component/health_component.gd" id="3_y5kmb"]
[ext_resource type="PackedScene" uid="uid://bnkur2kld0tc4" path="res://scripts/components/self_destruction_component/self_destruction_component.tscn" id="4_48gcq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kthux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gopy7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ogy7"]

[node name="TownHall" type="StaticBody2D" groups=["BattlegroundObjects", "buildings"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_wqvst")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kthux")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_y5kmb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8ogy7")

[node name="SelfDestructionComponent" parent="." instance=ExtResource("4_48gcq")]

[connection signal="hp_ran_out" from="HealthComponent" to="." method="_on_health_component_hp_ran_out"]
